...
        app:layout_constraintRight_toRightOf="@+id/setUpText"
        app:layout_constraintTop_toBottomOf="@+id/setUpText"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintRight_creator="1" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allReadyLinked"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
