<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.materialdesign2.ClubSuggestion"
    tools:showIn="@layout/activity_club_suggestion">

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="362dp" />

    <Button
        android:id="@+id/getSuggestion"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="156dp"
        android:text="Get Suggestion"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSuggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/suggestion_header"
        android:inputType="text|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/getSuggestion"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="344dp"
        android:layout_height="216dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Possible Shots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
